# hmw

./: .gitignore  image-rag-props.md
bash/: mcp-inspector.sh  mcpw.sh  wiptest.sh
fastmcpex/: README.md  app.py  curl-init.sh  curl-listtools.sh  curl-nowinitialized.sh  curl-toolcall.sh  curlit.sh  pyproject.toml  run-curl-interaction.sh
rust/: Cargo.toml
rust/common/: Cargo.toml
rust/common/src/: lib.rs
rust/network/: Cargo.toml
rust/network/src/: main.rs
rust/src/: main.rs
rust/stdio/: Cargo.toml  hi.sh  test.sh
rust/stdio/src/: main.rs
rust/toolkitex/: Cargo.toml
rust/toolkitex/src/: greeter.rs  main.rs
