[package]
name = "mcpwn"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = true
# Below makes EXE more petit
lto = "fat"
codegen-units = 1
incremental = false
# Trades file size decrease for decreased performance
#opt-level = "z"