[package]
name = "mcpws"
version = "0.1.0"
edition = "2024"

[dependencies]
typify-macro = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log="0.4.28"
env_logger="0.11.8"
argh = "0.1.13"

[profile.release]
strip = true
# Below makes EXE more petit
lto = "fat"
codegen-units = 1
incremental = false
# Trades file size decrease for decreased performance
#opt-level = "z"