[package]
name = "mcpws"
version = "0.1.0"
edition = "2024"

[dependencies]
typify-macro = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing="0.1"
tracing-subscriber = "0.3"
argh = "0.1.13"

[profile.release]
strip = true
# Below makes EXE more petit
lto = "fat"
codegen-units = 1
incremental = false
# Trades file size decrease for decreased performance
#opt-level = "z"

[features]
default = ["debug_log"]
# Whether to enable debug trace statements in code (increases binary size by >100K, if small binary really matters to you)
debug_log = []